--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,16 +24,16 @@
     <% end %>
 
     <nav class="navbar is-info">
-  		<div class="navbar-brand">
-  		  <%= link_to root_path, class: "navbar-item" do %>
-  			  <h1 class="title is-5">Twittter</h1>
-  		  <% end %>
+      <div class="navbar-brand">
+        <%= link_to root_path, class: "navbar-item" do %>
+          <h1 class="title is-5">Twittter</h1>
+        <% end %>
         <div class="navbar-burger burger" data-target="navbarExample">
             <span></span>
             <span></span>
             <span></span>
         </div>
-  	  </div>
+      </div>
 
     <div id="navbarExample" class="navbar-menu">
       <div class="navbar-end">
@@ -42,6 +42,21 @@
             <p class="control">
               <%= link_to 'New Tweeet', root_path, class: "button is-info is-inverted" %>
             </p>
+            <% if user_signed_in? %>
+              <p class="control">
+                <%= link_to current_user.name, edit_user_registration_path, class: "button is-info" %>
+              </p>
+              <p>
+                <%= link_to "Logout", destroy_user_session_path, method: :delete, class:"button is-info" %>
+              </p>
+            <% else %>
+              <p class="control">
+                <%= link_to 'Sign In', new_user_session_path, class: "button is-info" %>
+              </p>
+              <p class="control">
+                <%= link_to 'Sign Up', new_user_registration_path, class: "button is-info" %>
+              </p>
+            <% end %>
           </div>
         </div>
       </div>
